04/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    nginx.org/redirect-to-https: "false"
    nginx.org/rewrites: "serviceName=passage-v2-webapp-svc rewrite=/;serviceName=weather-api-svc rewrite=/"
spec:
  ingressClassName: nginx
  rules:
  - host: app.WKLEJ_TU_ADRES_IP.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: passage-webapp-svc
            port:
              number: 80
      - path: /v2/
        pathType: Prefix
        backend:
          service: 
            name: passage-v2-webapp-svc
            port:
              number: 80
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: weather-api-svc
            port: 
              number: 80
